# GrowCred_Bank

./: Dockerfile  GrowCred.pem  Oz-django-project  README.md  docker-compose-local.yml  docker-compose.yml  docker-compose_prod.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_address_alter_customuser_email.py  0002_alter_customuser_birthdate.py
config/: wsgi.py
config/settings/: base.py  dev.py  prod.py
config/urls/: __init__.py  urls_dev.py  urls_prod.py
templates/personal_banking/: personal_banking.html
templates/transactions/: base.html  success.html  transactions_deposit_form.html  transactions_list.html  transactions_withdrawal_form.html
templates/users/: account_inquiry.html  base.html  home.html  login.html  profile.html  signup.html  transfer.html
transactions/: admin.py  forms.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
utils/: time_models.py
